--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "clamp": "^1.0.1",
     "react-native-material-ui": "^1.6.0",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.0"
   },
   "peerDependencies": {
     "react": "*",
